<resources>
    <string name="app_name">RLWiki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_to_rlwiki">Welcome to RLWiki</string>
    <string name="click_on_items_in_navigation_panel">Click on items in navigation panel</string>

    <string name="car">Car</string>
    <string name="octane">Octane</string>
    <string name="dominus">Dominus</string>

    <string name="wheel">Wheel</string>
    <string name="zomba">Zomba</string>
    <string name="draco">Draco</string>

    <string name="boost">Boost</string>
    <string name="hexphase">Hexphase</string>
    <string name="magic_missile">Magic Missile</string>
</resources>
